--- a/index.html
+++ b/index.html
@@ -2374,8 +2374,8 @@
                                         <!-- Row 1: Date & Amount & Currency Combined -->
                                         <div class="flex flex-wrap gap-2 mb-2">
                                             <!-- Date (Compact) -->
-                                            <div class="relative flex-1 min-w-[130px]">
-                                                <input type="date" id="expense-date" class="w-full p-2 text-xs md:text-sm bg-gray-50 rounded-xl font-bold text-gray-700 h-full">
+                                            <div class="relative flex-1 min-w-[140px]">
+                                                <input type="date" id="expense-date" class="w-full py-3 px-3 text-sm bg-gray-50 rounded-xl font-bold text-gray-700">
                                             </div>
                                             <!-- Amount & Currency -->
                                             <div class="flex-[2] flex gap-1 min-w-0">
@@ -2387,7 +2387,6 @@
                                                 </div>
                                             </div>
                                         </div>
-
                                         <!-- Row 2: Description & Camera -->
                                         <div class="flex gap-2 mb-2">
                                             <input type="text" id="expense-description" placeholder="用途 (例如: 拉麵)" class="flex-1 min-w-0 p-2 bg-gray-50 rounded-xl font-bold text-gray-700">
